# chesscxx

./: .buildinfo  .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  trace.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/api_reference/core/: index.doctree
.doctrees/api_reference/formatting/: index.doctree
.doctrees/api_reference/hashing/: index.doctree
.doctrees/api_reference/movegen/: index.doctree
.doctrees/api_reference/parsing/: index.doctree  parse.doctree  parse_as.doctree  parse_error.doctree  parse_from.doctree  parse_result.doctree  parser.doctree
.doctrees/contributing_to_chesscxx/: index.doctree
.doctrees/getting_started/: index.doctree
.doctrees/license/: index.doctree
.github/workflows/: benchmark.yaml  ci.yaml
api_reference/: index.html
api_reference/core/: index.html
api_reference/core/errors/: move_error.html  piece_placement_error.html  position_error.html
api_reference/core/move_representations/: san_move.html  uci_move.html
api_reference/core/primary_interface/: game.html
api_reference/core/supporting_types/: castling_rights.html  castling_side.html  check_indicator.html  color.html  draw_reason.html  file.html  game_result.html  partial_square.html  piece.html  piece_placement.html  piece_type.html  position.html  rank.html  square.html
api_reference/formatting/: index.html
api_reference/hashing/: index.html
api_reference/movegen/: index.html
api_reference/parsing/: index.html  parse.html  parse_as.html  parse_error.html  parse_from.html  parse_result.html  parser.html
benchmarks/: CMakeLists.txt  perft_benchmark.cpp
cmake/: coverage-targets.cmake  coverage.cmake  dev-mode.cmake  docs-targets.cmake  docs.cmake  install-config.cmake  install-rules.cmake  iwyu-targets.cmake  iwyu.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  spell.cmake  variables.cmake
contributing_to_chesscxx/: index.html
docs/: Doxyfile.in  conf.py  index.rst
docs/api_reference/: index.rst
docs/api_reference/core/: index.rst
docs/api_reference/formatting/: index.rst
docs/api_reference/hashing/: index.rst
docs/api_reference/movegen/: index.rst
docs/api_reference/parsing/: index.rst  parse.rst  parse_as.rst  parse_error.rst  parse_from.rst  parse_result.rst  parser.rst
docs/contributing_to_chesscxx/: index.rst
docs/contributing_to_chesskit/: index.rst
docs/getting_started/: index.rst
docs/license/: index.rst
examples/: CMakeLists.txt  basic_full_game_usage.cpp  basic_pgn_usage.cpp  castling_rights_parse_usage.cpp  castling_rights_usage.cpp  castling_side_usage.cpp  check_indicator_usage.cpp  color_usage.cpp  draw_reason_usage.cpp  file_usage.cpp  game_general_usage.cpp  game_hash_usage.cpp  game_repetition_usage.cpp  game_result_usage.cpp  game_usage.cpp  move_error_usage.cpp  movegen_castling_usage.cpp  movegen_promotion_usage.cpp  movegen_usage.cpp  optional_formatter_usage.cpp  parse_as_usage.cpp  parse_error_usage.cpp  parse_from_usage.cpp  parse_result_usage.cpp  parser_usage.cpp  partial_square_usage.cpp  piece_placement_error_usage.cpp  piece_placement_usage.cpp  piece_type_usage.cpp  piece_usage.cpp  position_error_usage.cpp  position_hash_usage.cpp  position_legal_en_passant_usage.cpp  position_usage.cpp  rank_usage.cpp  san_castling_move_usage.cpp  san_move_usage.cpp  san_normal_move_usage.cpp  square_usage.cpp  uci_move_usage.cpp
examples/data/: games.pgn
getting_started/: index.html
include/chesscxx/: castling_rights.h  castling_side.h  check_indicator.h  color.h  draw_reason.h  file.h  game.h  game_result.h  move_error.h  movegen.h  parse.h  parse_error.h  partial_square.h  piece.h  piece_placement.h  piece_placement_error.h  piece_type.h  position.h  position_error.h  rank.h  san_move.h  square.h  uci_move.h
include/chesscxx/core/: castling_rights.h  castling_side.h  check_indicator.h  color.h  draw_reason.h  file.h  game.h  game_result.h  move_error.h  partial_square.h  piece.h  piece_placement.h  piece_placement_error.h  piece_placement_impl.h  piece_type.h  position.h  position_error.h  position_impl.h  rank.h  san_move.h  square.h  uci_move.h
include/chesscxx/formatter/: base_formatter.h  castling_rights_formatter.h  castling_side_formatter.h  check_indicator_formatter.h  color_formatter.h  draw_reason_formatter.h  file_formatter.h  game_formatter.h  game_result_formatter.h  move_error_formatter.h  parse_error_formatter.h  partial_square_formatter.h  piece_formatter.h  piece_placement_error_formatter.h  piece_placement_formatter.h  piece_type_formatter.h  position_error_formatter.h  position_formatter.h  rank_formatter.h  san_move_formatter.h  square_formatter.h  uci_move_formatter.h
include/chesscxx/hash/: castling_rights_hash.h  game_hash.h  piece_hash.h  piece_placement_hash.h  position_hash.h  square_hash.h  uci_move_hash.h
include/chesscxx/movegen/: game_movegen.h
include/chesscxx/parser/: castling_rights_parser.h  color_parser.h  (+18 more)
include/chesskit/: castling_rights.h  castling_side.h  check_indicator.h  color.h  draw_reason.h  file.h  game.h  game_result.h  move_error.h  movegen.h  parse.h  parse_error.h  partial_square.h  piece.h  piece_placement.h  piece_placement_error.h  piece_type.h  position.h  position_error.h  rank.h  san_move.h  square.h  uci_move.h
license/: index.html
tests/: CMakeLists.txt  castling_rights_test.cpp  castling_side_test.cpp  check_indicator_test.cpp  color_test.cpp  draw_reason_test.cpp  file_test.cpp  game_result_test.cpp  game_test.cpp  move_error_test.cpp  movegen_test.cpp  optional_formatter_test.cpp  parse_error_test.cpp  parse_test.cpp  partial_square_test.cpp  piece_placement_error_test.cpp  piece_placement_test.cpp  piece_test.cpp  piece_type_test.cpp  position_error_test.cpp  position_test.cpp  rank_test.cpp  san_move_test.cpp  square_test.cpp  test_helper.h  uci_move_test.cpp
tests/data/: game.yaml  movegen.yaml  piece_placement.yaml  position.yaml
(+156 files in other folders)
